[package]
name          = "javawithrust_macro"
version       = "0.1.0"
authors       = ["Totobird Creations"]
edition       = "2021"
description   = "Transfer function calls between Rust and Java in a rust-like (ish) way."
license       = "MIT"
keywords      = ["java", "shared-library", "library", "dynamic-library", "ffi"]
categories    = ["development-tools::ffi"]

documentation = "https://docs.rs/javawithrust"
homepage      = "https://crates.io/crates/javawithrust"
repository    = "https://github.com/Totobird-Creations/JavaWithRust-Lib"

[lib]
proc-macro = true

[dependencies.syn]
version  = "1.0"
features = [
    "full"
]

[dependencies]
quote = "1.0"